  Red Potion weighs 7, then type 'weight 7').
- arrowcraft forceuse #
  Craft arrows immediately without using the skill.
  On many servers any class can create arrows using this exploit.
  # is the inventory number of the item you wish to craft into arrows.
- friend
  List your friends.
- friend request #
  Request a player to be your friend.
  The player number is obtained by the 'pl' command.
- friend accept
  Accept the request to be friend.
- friend reject
  Reject the request to be friend.
- friend pm #
  Add the specified friend to the PM list for easy PM-ing.

New config options:
- partySkill: target_dead
  Only use the skill on a dead player. Useful for Resurrection.
- avoidGM_namePattern (regular expression)
  In case your server uses non-standard GM names, you can specify a
  regular expression for GM names with this option.
- teleportAuto_totalDmg (number)
  teleportAuto_totalDmgInLock (number)
  Teleport away if a monster has done this much total damage to you.
- dcOnZeny (number)
  Disconnect automatically when your Zeny equals or lower than the
  specified number. Useful if you use buyAuto or the auto buy plugin.
- teleportAuto_atkCount (number)
  Teleport away if Kore can't kill the monster in the specified number
  of attacks.
- "e" sequence for NPC talk steps; use it when you want kore to wait
  until the NPC says "Done talking"
- route_teleport_notInMaps (list of maps)
  Do not teleport on route in the specified maps.
- serverType 4
  Set this for new Freya servers such as EuphRO and VanRO.

New control files:
- control/sys.txt
  This file stores options that can only be loaded once (so this file
  cannot be reloaded). You can get a default version of this file
  from the default configuration files archive.

Internal:
- whenGroundStatus() now takes coordinates instead of a player/monster.
- There's now a %sys (in package Settings) variable for options in
  control/sys.txt
- Most modules are now autoloadable (see perldoc SelfLoader).